--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,7 +10,7 @@ backend:
 parser:
   build: .
   dockerfile: parser.Dockerfile
-  command: python3 -m celery worker -A parse1 -B -s /tmp/celerybeat-schedule
+  command: python3 -m celery worker -A parser -B -s /tmp/celerybeat-schedule
   environment:
     - C_FORCE_ROOT=true
   links:
