--- a/yami-frontend/package.json
+++ b/yami-frontend/package.json
@@ -6,7 +6,9 @@
     "react-scripts": "0.2.3"
   },
   "dependencies": {
+    "chart.js": "^2.2.1",
     "react": "^15.3.1",
+    "react-chartjs-2": "^1.2.4",
     "react-dom": "^15.3.1"
   },
   "scripts": {
