--- a/yami-frontend/package.json
+++ b/yami-frontend/package.json
@@ -9,7 +9,8 @@
     "chart.js": "^2.2.1",
     "react": "^15.3.1",
     "react-chartjs-2": "^1.2.4",
-    "react-dom": "^15.3.1"
+    "react-dom": "^15.3.1",
+    "superagent": "^2.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
