--- a/yami-frontend/package.json
+++ b/yami-frontend/package.json
@@ -10,6 +10,7 @@
     "react": "^15.3.1",
     "react-chartjs-2": "^1.2.4",
     "react-dom": "^15.3.1",
+    "react-router": "^2.8.0",
     "superagent": "^2.2.0"
   },
   "scripts": {
