--- a/yami-frontend/package.json
+++ b/yami-frontend/package.json
@@ -10,8 +10,11 @@
     "react": "^15.3.1",
     "react-chartjs-2": "^1.2.4",
     "react-dom": "^15.3.1",
+    "react-redux": "^5.0.6",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
+    "redux": "^3.7.2",
+    "redux-thunk": "^2.2.0",
     "superagent": "^2.2.0"
   },
   "scripts": {
