--- a/yami-frontend/package.json
+++ b/yami-frontend/package.json
@@ -6,7 +6,7 @@
     "react-scripts": "0.2.3"
   },
   "dependencies": {
-    "chart.js": "^2.2.1",
+    "chart.js": "^2.7.0",
     "react": "^15.3.1",
     "react-chartjs-2": "^1.2.4",
     "react-dom": "^15.3.1",
@@ -15,7 +15,8 @@
     "react-router-dom": "^4.2.2",
     "redux": "^3.7.2",
     "redux-thunk": "^2.2.0",
-    "superagent": "^2.2.0"
+    "superagent": "^2.2.0",
+    "whatwg-fetch": "^2.0.3"
   },
   "scripts": {
     "start": "react-scripts start",
